--- a/swistkids_model_two_agents.ipynb
+++ b/swistkids_model_two_agents.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Switch or Stay?\n",
+    "## Task design: Agent vs. Agent\n",
+    "Xi Jia, June 2018\n",
+    "\n",
+    "In this variant of the task, two agents (a \"weak\" and a \"strong\" agent) each hide behind a curtain and try to lift a box. We will manipulate the outcome of each agent's action, and measure which of the two unknown boxes the child chooses."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
